frontend/src/components/FilterStatusButton/FilterStatusButton.css
.dropdown-filter {
  position: relative;
  display: inline-block;
  min-width: 100px;
  flex-shrink: 0;
}

.dropdown-btn-filter {
    display: flex;
    width: 100%; 
    height: 40px;
    align-items: center;
    justify-content: center;
    font-family: var(--font-heading);
    gap: 8px;
    background: #fff;
    border: 1px solid #ddd;
    padding: 8px 16px;
    border-radius: 5px;
    cursor: pointer;
}

.dropdown-btn-filter:hover {
    background-color: #f5f5f5;
}

.dropdown-menu-filter {
  width: 145px;
  position: absolute;
  font-family: var(--font-heading);
  font-size: 0.875rem;
  top: 110%;
  left: 50%;
  transform: translateX(-50%);
  background: #FFFFFF;
  border: 1px solid #ddd;
  border-radius: 5px;
  list-style: none;
  padding: 6px 8px;
  margin: 0;
  z-index: 10;
}

.dropdown-menu-filter li {
  height: 32px;
  font-family: var(--font-heading);
  display: flex;
  color: #09090B;
  align-items: center;
  gap: 10px;
  border-radius: 5px;
  padding: 6px 8px;
  cursor: pointer;
  transition: all ease 200ms;
  cursor: default;
}

.dropdown-menu-filter li:hover {
  background: #f5f5f5;
}

